--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PDFfromView</string>
+    <string name="empire_state_building_is_located_in_the_new_york_us">Empire state building is located in the New York, US</string>
+    <string name="empire_state_building_is_located_in_the_new_york_us">Empire state building is located in the New York, US</string>
+    <string name="empire_state_building_is_located_in_the_new_york_us">Empire state building is located in the New York, US</string>
 </resources>
